<resources>
    <string name="app_name">PolyTuner</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="title_activity_settings">Settings</string>

    <string name="info_title">Info</string>
    <string name="copyright">Copyright \u00A9 2017 ambient_luna</string>

    <!-- Poly Preferences -->
    <string name="poly_title">Polyphonic mode</string>
    <string name="poly_on">On</string>
    <string name="poly_off">Off</string>

    <!-- Tuning Preferences -->
    <string name="tuning_title">Tuning</string>

    <!-- Display Preferences -->
    <string name="display_mode_title">Display</string>
    <string name="display_mode_classic">Classic</string>
    <string name="display_mode_strobe">Strobe</string>

</resources>
